Add course content for merge-branch

--- a/example/course-resources/fork/archives-index.yaml
+++ b/example/course-resources/fork/archives-index.yaml
@@ -3,3 +3,4 @@ asset_index:
     basic-operation: basic-operation.zip
     commits-advanced: commits-advanced.zip
     checkout-branches: checkout-branches.zip
+    merge-branches: merge-branches.zip
