--- a/example/course-resources/fork/levels/fastforward-branch.yaml
+++ b/example/course-resources/fork/levels/fastforward-branch.yaml
@@ -71,7 +71,7 @@
 
     - !elaborate 
       descriptionId: "level-data/fastforward-branch/behind-merge-target-result"
-    - !instruct 
+    - !elaborate 
       descriptionId: "level-data/fastforward-branch/summary"
 
     
