--- a/example/course-resources/fork/levels-index.yaml
+++ b/example/course-resources/fork/levels-index.yaml
@@ -49,6 +49,7 @@ asset_index:
     main.merge-branch.name: "6-1 節：合併分支以融合變更"
     main.fastforward-branch.name: "6-2 節：合併領先的分支以更新分支狀態"
     main.delete-merged.name: "6-3 節：刪除已合併的分支"
+    main.delete-unmerged.name: "6-4 節：刪除未合併的分支以捨棄不想要的變更"
 
   ondisk:
   # level configs of section one: intro
@@ -91,3 +92,4 @@ asset_index:
     merge-branch: "merge-branch.yaml"
     fastforward-branch: "fastforward-branch.yaml"
     delete-merged: "delete-merged.yaml"
+    delete-unmerged: "delete-unmerged.yaml"
